src/main/source_resources/css/style.css
/* ... */
.right_panel .tools_dropdown_container>#tools_dropdown .sound_on_item:before {
    content: 'volume_up';
}

.right_panel .tools_dropdown_container>#tools_dropdown .leave_room_item:before {
    content: 'exit_to_app';
}

.right_panel .tools_dropdown_container>#tools_dropdown .remove_history_item:before {
    content: 'delete';
}

.transparent_input {
    border: 0 solid #000;
    border-bottom-width: 1px;
    border-bottom-color: #bcbcbc;
    background-color: transparent;
    color: #bcbcbc;
    font-size: 18px;
    padding-left: 17px;
    padding-bottom: 5px;
    padding-top: 5px;
}

.search_input {
    width: calc(100% - 20px);
    height: 100%;
    border: none;
    font-size: 16px;
    font-family: "Roboto";
    display: inline-block;
    font-weight: 500;
    -webkit-transition: visibility 0s, opacity .5s linear;
    transition: visibility 0s, opacity .5s linear;
}

.search_input:focus,
.transparent_input:focus {
    outline: 0
}

.material_button {
    background: 0;
    border: 0;
    display: inline-block;
    outline: 0;
    cursor: pointer;
    padding: 0;
}

.right_panel .open_dropdown_button {
    /* margin-left: 18px; */
    z-index: 39;
    color: #8b8b8b;
}

.dropdown_item {
    line-height: 22px;
    padding: 4px 25px 4px 44px;
    display: block;
}

.dropdown_item:hover {
    background-color: #e4eaf0;
}

.dropdown_item:before {
    position: absolute;
    left: 10px;
    content: '';
    background-size: cover;
    background-repeat: no-repeat;
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 20px;
    line-height: 24px;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
}

.right_panel .close_search_icon,
.right_panel .search_icon {
    /*position: absolute;
    right: 0;
    top: 0;*/
    line-height: 29px;
    height: 100%;
    color: #8b8b8b;
}

.right_panel .message_details hr {
    margin-top: 10px;
}

.right_panel hr {
    margin-bottom: 0px;
    margin-top: 0px;
}

.messages_output_area {
    height: 100%;
    overflow-y: auto !important;
    padding-top: 10px;
    padding-bottom: 10px;
}

.message_date_separator {
    text-align: center;
    color: #bcbcbc
}

.message_date_separator>* {
    vertical-align: middle
}

.date_indicator {
    font-size: 10px;
    min-width: 50px;
    display: inline-block;
}

.message_date_separator .line {
    width: 20%;
    height: 1px;
    background-color: #bcbcbc;
    display: inline-block;
    content: "";
}

.message_date_separator .big_dot {
    background-color: #bcbcbc;
    display: inline-block;
    width: 7px;
    height: 7px;
    border-radius: 50%
}

.user_message {
    padding-bottom: 25px;
    padding-top: 8px
}

.user_message:nth-child(2) {
    margin-top: 39px
}

.user_message>* {
    vertical-align: top
}

.user_message .message_author_avatar {
    display: inline-block;
    margin-top: 10px;
}

.user_message .message_author_avatar>div {
    width: 45px;
    height: 45px;
    background-color: #f26522;
    display: inline-block;
    border-radius: 50%;
    border: 0;
    background-size: cover;
    background-repeat: no-repeat;
    background-position-x: center;
    background-position-y: center;
}

.user_message .message_details {
    display: inline-block;
    padding-right: 20px;
    width: calc(100% - 130px);
    border-radius: 5px;
    min-height: 55px;
    padding-top: 15px;
    padding-left: 15px;
    padding-bottom: 19px;
}

.user_message .message_details .top_details {
    margin-bottom: 12px;
    max-width: calc(100% - 40px);
}

.user_message .message_details .messag_author_name {
    font-weight: bold;
    color: #425569;
    display: block;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 100%;
    white-space: nowrap;
}

.bottom_details {
    white-space: pre-wrap;
    word-break: break-all
}

.message_date {
    color: #929292;
    font-size: 14px
}

.messages_input_area {
    position: absolute;
    bottom: 0px;
    background-color: white;
    padding-bottom: 10px;
    margin-left: 4px;
    right: 0;
    left: 0;
}

.messages_input_area .message_input {
    width: calc(100% - 40px);
    margin-left: 19px;
    font-size: 15px;
    color: #949494;
    min-height: 65px;
}

.bottom_block {
    padding-bottom: 10px;
    overflow: auto;
    outline: 0;
    max-height: calc(100% - 25px);
    /* padding-bottom: 40px */
}

.left_panel_mini .bottom_block {
    padding-bottom: 0px;
    max-height: 100%;
    padding-top: 25px;
}

.controls_area {
    margin-top: 6px;
}

.controls_area button {
    border: 0;
    background: 0;
    border: 0;
    outline: 0;
    display: inline-block;
    margin-top: 4px;
    padding: 0;
}

.controls_area button > i {
    color: #8b8b8b;
    font-size: 24px !important;
}

.controls_area button:hover > i {
    color: #4b75a4;
    font-size: 22px;
}

.attaches_area {
    display: inline-block;
    float: right;
    margin-right: 10px;
}

.send_button {
    font-family: MyriadPro2;
    width: 140px;
    height: 35px;
    background-color: #3598db;
    font-size: 16px;
    /* padding-top: 11px; */
    /* padding-left: 11px; */
    color: #fff;
    display: inline-block;
    float: right;
    border-radius: 5px;
    text-align: center;
    line-height: 35px;
    cursor: pointer;
    margin-left: 5px;
    text-transform: uppercase;
}

.send_button i.material-icons {
    display: inline;
    font-size: 16px;
    position: relative;
    top: 3px;
    display: none;
}

.send_button:hover {
    opacity: 0.8;
}

.send_button.disabled {
    opacity: .5;
    pointer-events: none;
}

.multimedia_conversation_controls {
    display: inline-block;
    margin-left: 26px;
    opacity: 0.2;
    pointer-events: none;
}

.multimedia_conversation_controls>* {
    cursor: pointer
}
/* ... */

